--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -287,7 +287,7 @@ tr {
 	}
 		.tList tr.tHeader {
 			font-size:18px;
-			background-color:#a8adb3;
+			background-color:#a8adb3 !important;
 			height:34px;
 			color:#ffffff;
 		}
@@ -660,9 +660,34 @@ tr {
 				#notice #list span {
 					color:#e02842;
 				}
-	/* module user */
-	.tablet {
-		width:830px;
+	
+	#list_infos_user #login {background:url('images/ico_nom.png') left center no-repeat; margin-left:-35px; padding-left:30;}
+	#list_infos_user #rights {background:url('images/ico_rights.png') left center no-repeat; margin-left:-35px; padding-left:30;}
+	#list_infos_user #email {background:url('images/ico_email.png') left center no-repeat; margin-left:-35px; padding-left:30;}
+	#list_infos_user #lang {background:url('images/ico_lang.png') left center no-repeat; margin-left:-35px; padding-left:30;}
+	
+	.row {width:100%;}
+	.row:before, .row:after {
+		display:table;
+		content:' ';
+	}
+	.row:after {clear:both;}
+
+	/* largneur colone */
+	.col-10 {width:10% !important; min-width:100px !important;}
+	.col-20 {width:20% !important; min-width:200px !important;}
+	.col-30 {width:30% !important; min-width:300px !important;}
+	.col-40 {width:40% !important; min-width:400px !important;}
+	.col-50 {width:50% !important; min-width:500px !important;}
+	.col-60 {width:60% !important;}
+	.col-70 {width:70% !important;}
+	.col-80 {width:80% !important;}
+	.col-90 {width:90% !important;}
+	.col-100 {width:100% !important;}
+
+	.panel {
+		float:left;
+		margin-right:15px;
 		background-color:#f0f0f0;
 		border-bottom:2px solid #b5b5b5;
 		-webkit-border-radius:4px;
@@ -670,51 +695,6 @@ tr {
 		-o-border-radius:4px;
 		border-radius:4px;
 		margin-bottom:15px;
-	}
-	.tablet_user {
-		padding:10px;
-	}
-		.clip_task {
-			position:relative;
-			margin:-28px 0 0 -50px;
-			left:50%;
-		}
-		#list_infos_user_container {
-			width:360px;
-			height:452px;
-			float:left;
-		}
-			#list_infos_user {
-				width:300px;
-				list-style:none;
-				line-height:40px;
-			}
-			#list_infos_user #login {background:url('images/ico_nom.png') left center no-repeat; margin-left:-35px; padding-left:30;}
-			#list_infos_user #rights {background:url('images/ico_rights.png') left center no-repeat; margin-left:-35px; padding-left:30;}
-			#list_infos_user #email {background:url('images/ico_email.png') left center no-repeat; margin-left:-35px; padding-left:30;}
-			#list_infos_user #lang {background:url('images/ico_lang.png') left center no-repeat; margin-left:-35px; padding-left:30;}
-		#tablet_user_avatar {
-			width:450px;
-			float:left;
-		}
-			#tablet_user_avatar_container {
-				width:450px;
-				background-color:#fff;
-				border-bottom:2px solid #b5b5b5;
-				-webkit-border-radius:4px;
-				-moz-border-radius:4px;
-				-o-border-radius:4px;
-				border-radius:4px;
-			}
-				#tablet_user_avatar_container img {
-					width:434px;
-					padding:8px;
-				}
-	.panel {
-		width:30%;
-		min-width:290px;
-		float:left;
-		margin-right:15px;
 	}
 		.panel-header {
 			width:100%;
@@ -736,6 +716,10 @@ tr {
 		.panel-body {
 			background-color:#fff;
 		}
+			.panel-body-header {
+				padding:15px;
+				border-bottom:1px solid #f5f5f5;
+			}
 			.panel-body-content {
 				padding:15px;
 			}
@@ -752,7 +736,7 @@ tr {
 				margin:0;
 			}
 				.panel-body tr:nth-child(odd){
-					background-color:#fbfbfb;
+					background-color:#fafafa;
 				}
 				.panel-body tr:hover {
 					background-color:#e6e6e6;
@@ -818,7 +802,6 @@ tr {
 						.graphic-bar-spending:hover {opacity:0.6;}
 						.graphic-bar-empty {background-color:#fff;}
 	.graphic {
-		width:60%;
 		padding:0 8px 0 7px;
 	}
 		.graphic .panel-header {
