--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -249,7 +249,7 @@ tr {
 	transition:all .1s ease-in;
 }
 	#barLeft-content {
-		width:200px;
+		width:250px;
 		margin-top:50px;
 	}
 		#barLeft-content form {
@@ -259,6 +259,27 @@ tr {
 				height:26px;
 				width:181px;
 			}
+		#barLeft-content ul {
+			width:100%;
+			list-style:none;
+			margin:30px 0 0 0;
+			padding:0;
+		}
+			#barLeft-content li {
+				background-color:#232b2e;
+				padding:0 15px;
+				height:40px;
+				-webkit-transition:all .07s ease-in;
+				-moz-transition:all .07s ease-in;
+				-o-transition:all .07s ease-in;
+				transition:all .07s ease-in;
+			}
+			#barLeft-content li:hover {background-color:#2D383C;}
+				#barLeft-content li a {
+					color:#fff;
+					line-height:40px;
+					text-decoration:none;
+				}
 #content {
 	margin:25px 0 0 250px;
 	padding:45px 15px 0 15px;
