--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -266,9 +266,10 @@ tr {
 			padding:0;
 		}
 			#barLeft-content li {
-				background-color:#232b2e;
-				padding:0 15px;
+				width:100%;
 				height:40px;
+				background-color:#232b2e;
+				display:inline-block;
 				-webkit-transition:all .07s ease-in;
 				-moz-transition:all .07s ease-in;
 				-o-transition:all .07s ease-in;
@@ -276,6 +277,8 @@ tr {
 			}
 			#barLeft-content li:hover {background-color:#2D383C;}
 				#barLeft-content li a {
+					width:100%;
+					padding:0 15px;
 					color:#fff;
 					line-height:40px;
 					text-decoration:none;
