--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -268,20 +268,22 @@ tr {
 			#barLeft-content li {
 				width:100%;
 				height:40px;
-				background-color:#232b2e;
+				background-color:#2D383C;
 				display:inline-block;
 				-webkit-transition:all .07s ease-in;
 				-moz-transition:all .07s ease-in;
 				-o-transition:all .07s ease-in;
 				transition:all .07s ease-in;
+				border-bottom:1px solid #232b2e;
 			}
-			#barLeft-content li:hover {background-color:#2D383C;}
+			#barLeft-content li:hover {background-color:#232b2e;}
 				#barLeft-content li a {
 					width:100%;
 					padding:0 15px;
 					color:#fff;
 					line-height:40px;
 					text-decoration:none;
+					display:inline-block;
 				}
 #content {
 	margin:25px 0 0 250px;
