--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -740,6 +740,7 @@ tr {
 			.panel-header a {
 				text-decoration:none;
 			}
+
 		.panel-body {
 			background-color:#fff;
 		}
@@ -772,6 +773,9 @@ tr {
 			.panel-body p {
 				margin:15px;
 			}
+		.panel-body img, .panel-body-content img {
+			max-width:100%;
+		}
 		.panel-footer {
 			background-color:#f5f5f5;
 		}
